# opencv_experiment

./: README.md
0_OpenCVtest/: CMakeLists.txt  main.cpp
10_CameraMeasure/: CMakeLists.txt  NIKinect.cpp  main.cpp
1_test/: 1_HelloOpenCV.cpp  CMakeLists.txt
2_hellokinect01/: CMakeLists.txt  main.cpp
2_hellokinect02/: CMakeLists.txt  main.cpp
2_hellokinect03/: CMakeLists.txt  NIKinect.cpp  main.cpp
3_GestureRecognition/: CMakeLists.txt  main.cpp
4_HumanSkeleton/: CMakeLists.txt  main.cpp
5_TrackBar/: CMakeLists.txt  NIKinect.cpp  main.cpp
6_Gesture1/: CMakeLists.txt  NIKinect.cpp  NIKinect.h  main.cpp
7_HumanSkeleton/: CMakeLists.txt  main.cpp
8_HandTrack/: CMakeLists.txt  NIKinect.h  main.cpp
9_CameraCalibration/: CMakeLists.txt  calibdata.txt  caliberation_result.txt  main.cpp
